# components/appointments/router.js
@@ -30,7 +30,7 @@ router
     )
 
 router
-    .route('/:id')
+    .route('/update/:id')
     .patch(
         authorization.requireAuth.bind(authorization),
         validator.validateRequest.bind(
@@ -40,7 +40,7 @@ router
     )
 
 router
-    .route('/:id')
+    .route('/delete/:id')
     .delete(
         authorization.requireAuth.bind(authorization),
         validator.validateRequest.bind(
